Setup app for heroku

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "web-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js"
@@ -13,5 +12,15 @@
     "express": "^4.17.1",
     "hbs": "^4.1.1",
     "request": "^2.88.2"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aaqleh/node3-weaher-website.git"
+  },
+  "bugs": {
+    "url": "https://github.com/aaqleh/node3-weaher-website/issues"
+  },
+  "homepage": "https://github.com/aaqleh/node3-weaher-website#readme",
+  "description": ""
 }
